--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,10 @@
+li {
+    list-style-type: none;
+}
+
 input.parse_error {
     border-color: rgba(229, 103, 23, 0.8);
     box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(229, 103, 23, 0.6);
     outline: 0 none;
 }
+
