--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,20 @@ button {
   margin-right: 5px;
 }
 
+a {
+    color: #03a9f4;
+    outline: none;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #03a9f4;
+}
+
+a:hover {
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.5);
+}
+
 .container {
     background-color: #2E3440;
     border-radius: 6px;
@@ -72,7 +86,7 @@ pre {
   color: #D8DEE9;
 }
 
-@media (min-width: 950px) {
+@media (min-width: 1100px) {
   #biscuit-wrapper {
     margin: auto;
     padding-bottom: 10px;
@@ -80,10 +94,10 @@ pre {
     grid-template-columns: auto;
     grid-template-rows: auto;
 
-    width: 80%;
+    width: 1100px;
   }
 
-  #biscuit-wrapper h2 {
+  #header {
     grid-column-start: 1;
     grid-column-end: end;
     grid-row-start: 1;
