--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
     font-size: 1em;
     font-weight: 400;
     line-height: 1.5;
+    margin: 0;
 }
 
 li {
@@ -81,9 +82,30 @@ pre {
   background: #2E3440;
 }
 
-#biscuit-wrapper h2 {
+#header {
   background-color: #2E3440;
   color: #D8DEE9;
+  height: 60px;
+}
+
+#header img {
+  height: 60px;
+  display: flex;
+  width: 200px;
+  float: left;
+  margin-left: 300px;
+}
+
+#header h2 {
+  height: 48px;
+  padding-top: 12px;
+  margin-left: 30px;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 300px;
+  float: left;
+
+  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
 @media (min-width: 1100px) {
@@ -97,7 +119,7 @@ pre {
     width: 1100px;
   }
 
-  #header {
+  #explain {
     grid-column-start: 1;
     grid-column-end: end;
     grid-row-start: 1;
