--- a/static/style.css
+++ b/static/style.css
@@ -149,7 +149,7 @@ pre {
     grid-template-columns: auto;
     grid-template-rows: auto;
 
-    width: 1100px;
+    max-width: 90%;
   }
 
   #explain {
@@ -165,7 +165,7 @@ pre {
     grid-row-start: 2;
     grid-row-end: end;
     width: 90%;
-    max-width: 500px;
+    max-width: 900px;
   }
 
   div#verifier {
@@ -174,7 +174,7 @@ pre {
     grid-row-start: 2;
     grid-row-end: 2;
     width: 90%;
-    max-width: 500px;
+    max-width: 900px;
   }
 }
 
